Chore: Update JDK version to 23